workspace-sf/force-app/main/default/objects/CampanhaIncentivo__c/CampanhaIncentivo__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar as campanhas de incentivo para os canais</description>
    <label>Campanha de incentivo</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campanhas de incentivo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>