workspace-sf/force-app/main/default/objects/CampanhaIncentivo__c/fields/CarenciaSegurosContratados__c.field-meta.xml
<CustomField>
    <fullName>CarenciaSegurosContratados__c</fullName>
    <label>Carência de seguros contratados</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 ano</fullName>
            </value>
            <value>
                <fullName>3 meses</fullName>
            </value>
            <value>
                <fullName>6 meses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>