workspace-sf/force-app/main/default/objects/CampanhaIncentivo__c/fields/CriterioAumentoPontuacao__c.field-meta.xml
<CustomField>
    <fullName>CriterioAumentoPontuacao__c</fullName>
    <label>Critério de aumento de pontuação</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opção 2</fullName>
            </value>
            <value>
                <fullName>Seguros cancelados e contratos no mesmo ano</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>