workspace-sf/force-app/main/default/objects/CampanhaIncentivo__c/fields/CriterioDesempate__c.field-meta.xml
<CustomField>
    <fullName>CriterioDesempate__c</fullName>
    <label>Critério de desempate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Soma total dos prêmios</fullName>
            </value>
            <value>
                <fullName>Soma total dos prêmios das propostas renovadas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>