workspace-sf/force-app/main/default/objects/CampanhaIncentivo__c/fields/CriterioEstorno__c.field-meta.xml
<CustomField>
    <fullName>CriterioEstorno__c</fullName>
    <label>Critério de estorno</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parcelas em aberto acima de 30 dias</fullName>
            </value>
            <value>
                <fullName>Planos suspensos</fullName>
            </value>
            <value>
                <fullName>Seguros cancelados em até 3 meses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>