workspace-sf/force-app/main/default/objects/CampanhaIncentivo__c/fields/CriterioEstornoPontuacao__c.field-meta.xml
<CustomField>
    <fullName>CriterioEstornoPontuacao__c</fullName>
    <label>Critério de estorno de pontuação</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parcelas em aberto, acima de 30 dias</fullName>
            </value>
            <value>
                <fullName>Planos suspensos</fullName>
            </value>
            <value>
                <fullName>Seguros cancelados</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>