workspace-sf/force-app/main/default/objects/CampanhaIncentivo__c/fields/CriterioPontuacao__c.field-meta.xml
<CustomField>
    <fullName>CriterioPontuacao__c</fullName>
    <label>Critério de pontuação</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Orçamentos / oportunidades</fullName>
            </value>
            <value>
                <fullName>Propostas transmitidas</fullName>
            </value>
            <value>
                <fullName>Propostas emitidas e ativas</fullName>
            </value>
            <value>
                <fullName>Propostas emitidas, com primeira fatura paga e ativas</fullName>
            </value>
            <value>
                <fullName>Renovações efetivadas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>