workspace-sf/force-app/main/default/objects/CampanhaIncentivo__c/fields/DesempatePontuacao__c.field-meta.xml
<CustomField>
    <fullName>DesempatePontuacao__c</fullName>
    <label>Desempate de pontuação</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quantidade de propostas emitidas, dentro da vigência</fullName>
            </value>
            <value>
                <fullName>Quantidade de propostas pagas, dentro da vigência</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>