workspace-sf/force-app/main/default/objects/CampanhaIncentivo__c/fields/LimiteMaximoRecuperacao__c.field-meta.xml
<CustomField>
    <fullName>LimiteMaximoRecuperacao__c</fullName>
    <label>Limite máximo de recuperação</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>