workspace-sf/force-app/main/default/objects/CampanhaIncentivo__c/fields/LimiteMinimoRecuperacao__c.field-meta.xml
<CustomField>
    <fullName>LimiteMinimoRecuperacao__c</fullName>
    <label>Limite mínimo de recuperação</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>