workspace-sf/force-app/main/default/objects/CampanhaIncentivo__c/fields/ModeloRemuneracao__c.field-meta.xml
<CustomField>
    <fullName>ModeloRemuneracao__c</fullName>
    <label>Modelo de remuneração</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monetário</fullName>
            </value>
            <value>
                <fullName>Percentual</fullName>
            </value>
            <value>
                <fullName>Pontos</fullName>
            </value>
            <value>
                <fullName>Recuperação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>