workspace-sf/force-app/main/default/objects/CampanhaIncentivo__c/fields/MomentoPagamento__c.field-meta.xml
<CustomField>
    <fullName>MomentoPagamento__c</fullName>
    <label>Momento de pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Emissão</fullName>
            </value>
            <value>
                <fullName>Fatura</fullName>
            </value>
            <value>
                <fullName>Pagamento parcela</fullName>
            </value>
            <value>
                <fullName>Protocolo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>