workspace-sf/force-app/main/default/objects/CampanhaIncentivo__c/fields/PremioMinimo__c.field-meta.xml
<CustomField>
    <fullName>PremioMinimo__c</fullName>
    <label>Prêmio mínimo</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>