workspace-sf/force-app/main/default/objects/CampanhaIncentivo__c/fields/Valor__c.field-meta.xml
<CustomField>
    <fullName>Valor__c</fullName>
    <label>Valor</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>