workspace-sf/force-app/main/default/objects/CampanhaIncentivo__c/validationRules/ValidarAtivacaoCampanhaIncentivo.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarAtivacaoCampanhaIncentivo</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
	ISPICKVAL(Status__c, &apos;Ativo&apos;), 
	NOT(ISPICKVAL(PRIORVALUE(Status__c), &apos;Em ativação&apos;)) 
)</errorConditionFormula>
    <errorMessage>A campanha de incentivo não pode ser ativada neste status</errorMessage>
</ValidationRule>