workspace-sf/force-app/main/default/objects/CampanhaIncentivo__c/validationRules/ValidarRecuperacaoModeloRemuneracao.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarRecuperacaoModeloRemuneracao</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(ModeloRemuneracao__c, &quot;Recuperação&quot;)  , 
AND(  ISNULL(CarenciaMesesRecuperacao__c) , ISNULL(LimiteMaximoRecuperacao__c) ,    ISNULL(LimiteMinimoRecuperacao__c) ) )</errorConditionFormula>
    <errorMessage>Os campos Competência, Limite de Recuperação Mínimo e Limite de Recuperação Máximo devem ser preenchidos.</errorMessage>
</ValidationRule>