workspace-sf/force-app/main/default/objects/CampanhaIncentivo__c/validationRules/ValidarStatusCriacao.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarStatusCriacao</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISNEW(),
    NOT(ISPICKVAL(Status__c,&quot;Em criação&quot;))
)</errorConditionFormula>
    <errorMessage>O status inicial deve ser Em criação</errorMessage>
</ValidationRule>