workspace-sf/force-app/main/default/objects/CampanhaIncentivo__c/validationRules/ValidarVigenciaFinal.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarVigenciaFinal</fullName>
    <active>true</active>
    <errorConditionFormula>VigenciaFinal__c &lt; VigenciaInicial__c</errorConditionFormula>
    <errorMessage>Vigência final deve ser superior a vigência inicial</errorMessage>
</ValidationRule>