workspace-sf/force-app/main/default/objects/CampanhaIncentivo__c/validationRules/ValidarVigenciaInicial.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarVigenciaInicial</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    VigenciaInicial__c &lt;  DATEVALUE(CreatedDate),
    VigenciaInicial__c &lt; TODAY()
)</errorConditionFormula>
    <errorMessage>Vigência inicial inválida</errorMessage>
</ValidationRule>