workspace-sf/force-app/main/default/objects/CampanhaIncentivo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Descricao__c</columns>
    <columns>VigenciaInicial__c</columns>
    <columns>VigenciaFinal__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas as campanhas de incentivo</label>
</ListView>